--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "babel-plugin-react-css-modules": "^5.2.1",
+    "css-loader": "^2.1.1",
+    "node-sass": "^4.11.0",
     "react": "^16.8.2",
+    "react-css-modules": "^4.7.9",
     "react-dom": "^16.8.2",
+    "react-icons": "^3.5.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.4.0",
     "react-scripts": "2.1.5",
@@ -13,7 +20,8 @@
     "redux-form": "^8.1.0",
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
-    "storybook": "^1.0.0"
+    "storybook": "^1.0.0",
+    "style-loader": "^0.23.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -33,11 +41,12 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "@storybook/react": "^5.0.2",
+    "@babel/core": "^7.3.4",
     "@storybook/addon-actions": "^5.0.2",
+    "@storybook/addon-info": "^5.0.2",
     "@storybook/addon-links": "^5.0.2",
     "@storybook/addons": "^5.0.2",
-    "@babel/core": "^7.3.4",
+    "@storybook/react": "^5.0.2",
     "babel-loader": "^8.0.5"
   }
 }
