--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-icons": "^3.5.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.4.0",
-    "react-scripts": "2.1.5",
+    "react-scripts": "^2.1.8",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.1.0",
     "redux-form": "^8.1.0",
