--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.4.0",
     "react-scripts": "^2.1.8",
+    "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.1.0",
     "redux-form": "^8.1.0",
