--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@babel/preset-react": "^7.0.0",
     "babel-plugin-react-css-modules": "^5.2.1",
     "css-loader": "^2.1.1",
+    "goodreads-api-node": "^0.0.10",
     "node-sass": "^4.11.0",
+    "proxify-url": "^1.0.1",
     "react": "^16.8.2",
     "react-css-modules": "^4.7.9",
     "react-dom": "^16.8.2",
@@ -22,7 +24,8 @@
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
     "storybook": "^1.0.0",
-    "style-loader": "^0.23.1"
+    "style-loader": "^0.23.1",
+    "xml-js": "^1.6.11"
   },
   "scripts": {
     "start": "react-scripts start",
