--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "axios": "^0.18.0",
     "babel-plugin-react-css-modules": "^5.2.1",
     "css-loader": "^2.1.1",
     "goodreads-api-node": "^0.0.10",
