--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "react-dom": "^16.8.2",
     "react-icons": "^3.7.0",
     "react-redux": "^6.0.1",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.8",
+    "react-spotify-player": "^1.0.4",
     "react-star-rating-component": "^1.4.1",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.1.0",
