--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "babel-plugin-react-css-modules": "^5.2.1",
     "css-loader": "^2.1.1",
     "goodreads-api-node": "^0.0.10",
+    "halogen": "^0.2.0",
     "node-sass": "^4.11.0",
     "proxify-url": "^1.0.1",
     "react": "^16.8.2",
