--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^2.1.8",
     "react-spotify-player": "^1.0.4",
     "react-star-rating-component": "^1.4.1",
+    "reactjs-popup": "^1.4.0",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.1.0",
     "redux-form": "^8.2.0",
