--- a/package.json
+++ b/package.json
@@ -5,17 +5,20 @@
   "dependencies": {
     "@babel/preset-env": "^7.3.4",
     "@babel/preset-react": "^7.0.0",
+    "@material-ui/core": "^3.9.3",
     "axios": "^0.18.0",
     "babel-plugin-react-css-modules": "^5.2.1",
     "css-loader": "^2.1.1",
     "goodreads-api-node": "^0.0.10",
     "halogen": "^0.2.0",
+    "material-ui": "^0.20.2",
     "node-sass": "^4.11.0",
     "proxify-url": "^1.0.1",
     "react": "^16.8.2",
     "react-css-modules": "^4.7.9",
     "react-dom": "^16.8.2",
     "react-icons": "^3.7.0",
+    "react-native-paper": "^2.15.2",
     "react-redux": "^6.0.1",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^4.3.1",
