--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "redux-form": "^8.2.0",
     "redux-saga": "^1.0.2",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.87.1",
     "storybook": "^1.0.0",
     "style-loader": "^0.23.1",
     "xml-js": "^1.6.11"
